@@ -23,6 +23,7 @@
  */
 package arjdbc.jdbc;
 
+import java.lang.reflect.InvocationTargetException;
 import java.sql.Connection;
 import java.sql.Driver;
 import java.sql.SQLException;
@@ -45,7 +46,7 @@ public class DriverWrapper {
     private final Properties properties;
 
     DriverWrapper(final Ruby runtime, final String name, final Properties properties)
-        throws ClassCastException, InstantiationException, IllegalAccessException {
+            throws ClassCastException, InstantiationException, IllegalAccessException, InvocationTargetException, NoSuchMethodException {
         this.driver = allocateDriver( loadDriver(runtime, name) );
         this.properties = properties == null ? new Properties() : properties;
     }
@@ -59,18 +60,22 @@ public class DriverWrapper {
     }
 
     private Driver allocateDriver(final Class<? extends Driver> driverClass)
-        throws InstantiationException, IllegalAccessException {
-        return driverClass.newInstance();
+            throws InstantiationException, IllegalAccessException, NoSuchMethodException, InvocationTargetException {
+        return driverClass.getDeclaredConstructor().newInstance();
     }
 
     protected static Class<? extends Driver> loadDriver(final Ruby runtime, final String name)
         throws ClassCastException {
-        @SuppressWarnings("unchecked")
-        Class<? extends Driver> klass = runtime.getJavaSupport().loadJavaClassVerbose(name);
-        if ( ! Driver.class.isAssignableFrom(klass) ) {
-            throw new ClassCastException(klass + " is not assignable from " + Driver.class);
+        try {
+            @SuppressWarnings("unchecked")
+            Class<? extends Driver> klass = (Class<? extends Driver>) runtime.getJavaSupport().loadJavaClass(name);
+            if ( ! Driver.class.isAssignableFrom(klass) ) {
+                throw new ClassCastException(klass + " is not assignable from " + Driver.class);
+            }
+            return klass;
+        } catch (ClassNotFoundException e) {
+            throw new RuntimeException("Cannot load driver class: " + name, e);
         }
-        return klass;
     }
 
     public Connection connect(final String url, final String user, final String pass)
